# Cosmic-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Session.vim  compile_commands.json  imgui.ini
.cache/clangd/index/: 3D_cubes.cpp.BDBF5265576518B5.idx  App.cpp.C1EBF425A3357240.idx  App.hpp.BCF14529FBCA23BC.idx  App2.cpp.12CB9F64943DFBAB.idx  App2.hpp.8E4621A7BDE676A2.idx  App3.cpp.453C9898A5438AB8.idx  App3.hpp.1A73CB044683C8CA.idx  CMakeCCompilerId.c.44AF048F04276BC2.idx  Camera.cpp.203B6CB715917C7F.idx  Camera.cpp.745589930007A2C3.idx  Camera.hpp.BA2334905190BA2B.idx  Camera.hpp.E3233E8D255AE0C5.idx  Color.hpp.806236A02ECC960D.idx  Color.hpp.E04936D162402605.idx  Cosmic.hpp.205D9637980F02A3.idx  Cosmic.hpp.A4A9AA182378E387.idx  EBO.cpp.1F8BC56BB4BC0045.idx  EBO.cpp.C728FF6939E2B953.idx  EBO.hpp.05DE19BFB95561F4.idx  EBO.hpp.F9E5E5B24981EC6D.idx  Input.cpp.4E9839DAB103674A.idx  Input.cpp.B58E6735C2952BD6.idx  Input.hpp.8170D8CE7B7E3EB6.idx  (+499 more)
dependencies/glad/: glad.c
examples/: 3D_cubes  3D_cubes.cpp  CMakeLists.txt  mandelbroat  mandelbroat.cpp  sine_word  sine_word.cpp  textures  textures.cpp
examples/resources/shaders/: App5.frag  App5.vert  default.frag  default.vert  mandelbroat.frag
resources/shaders/: texture.frag
shaders/: default.frag  default.vert  mandelbroat.vert
src/: App.cpp  App2.cpp  App3.cpp  App5.cpp  Camera.cpp  EBO.cpp  Input.cpp  Polygons.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  Window.cpp  main.cpp
src/cosmic/: Camera.cpp  EBO.cpp  Input.cpp  Polygons.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Window.cpp
src/include/: Camera.hpp  Cosmic.hpp  Defines.hpp  Input.hpp  Polygons.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Types.hpp  Window.hpp
src/includes/: App.hpp  App2.hpp  App3.hpp  App5.hpp
(+12 files in other folders)
